--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "uts_10119294_lingga"
+rootProject.name = "tugas_sensor_10119294"
 include ':app'
